--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 .idea/
-node_modules/
-composer.phar
-src/config.js
-src/*.css
-dist/*
-config.js
-npm-debug*
+
+client/node_modules
+client/src/config.js
+client/src/*.css
+client/dist/*
 client/config.js
+client/npm-debug*
+
+server/node_modules/
+server/dist/*
+server/config.js
