--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "request": "^2.67.0",
-    "restify": "^4.0.3"
+    "restify": "^4.0.3",
+    "config": "^1.17.1"
   }
 }
